--- a/index.html
+++ b/index.html
@@ -24,7 +24,33 @@
       border-radius: 5px;
     }
     .legend img { vertical-align: middle; width: 20px; height: 20px; margin-right: 6px; }
-  </style>
+  
+#legend {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 1000;
+  background: white;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+  line-height: 1.6;
+}
+
+#legend {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 1000 !important;
+  background: white;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+  line-height: 1.6;
+}
+</style>
 </head>
 <body>
   <h2>Oklahoma City CAD Calls</h2>
@@ -63,7 +89,7 @@
       "DISTURBANCE": "https://cdn-icons-png.flaticon.com/512/1683/1683539.png"
     };
 
-  const map = L.map('map', {
+    const map = L.map('map', {
   minZoom: 10,
   maxZoom: 15
 }).setView([35.4676, -97.5164], 11);
@@ -93,7 +119,7 @@
             const icon = L.icon({ iconUrl, iconSize: [25, 25] });
             const marker = L.marker([call.Latitude, call.Longitude], { icon }).addTo(map);
             marker.bindPopup(
-              `<b>${new Date(call.ResponseDate).toLocaleString()}</b><br>${call.Problem}<br>${call.Address}<br>${call.Disposition}`
+              `<b>${new Date(call.ResponseDate).toLocaleString()}</b><br>${call.Problem}<br>${call.Address.replace(/\d{1,4}/, 'XX')}<br>${call.Disposition}`
             );
             markers.push(marker);
             call._marker = marker;
@@ -105,7 +131,7 @@
             <td>${new Date(call.ResponseDate).toLocaleString()}</td>
             <td>${call.Problem}</td>
             <td>${call.Description}</td>
-            <td>${call.Address}</td>
+            <td>${call.Address.replace(/\d{1,4}/, 'XX')}</td>
             <td>${call.Disposition}</td>
             <td>${call.CallCompleteInfo}</td>
           `;
