--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@ calls
 
     const marker = L.marker([call.Latitude, call.Longitude], { icon }).addTo(map);
     marker.bindPopup(
-      `<div style="font-size: 16px;"><b>${new Date(call.ResponseDate).toLocaleString()}</b><br>${call.Problem}<br>${maskedAddress}<br>${call.Disposition}</div>`
+      `<div style="font-size: 16px;"><b>${new Date(call.ResponseDate).toLocaleString()}</b><br>${call.Problem}<br>${maskedAddress}<br>${call.Disposition}<br>${call.IncidentNumber}</div>`
     );
 
     const row = document.createElement('tr');
     row.innerHTML = `
-       <td>${call.Incidentnumber}</td>
+       <td>${call.IncidentNumber}</td>
       <td>${new Date(call.ResponseDate).toLocaleString()}</td>
       <td>${call.Problem}</td>
       <td>${maskedAddress}</td>
